# CMDU_DDE_DOCK

./: .gitignore  CMakeLists.txt  README.md  build.sh  cmduplugin.cpp  cmduplugin.h  cmduwidget.cpp  cmduwidget.h  install.sh  uninstall.sh
pkg/DEBIAN/: control  postinst
